// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`swapEgressScheduled > adds an egress and fee to a swap request 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "chunkIntervalBlocks": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "10000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2022-12-06T14:31:33.000Z,
  "depositFinalisedBlockIndex": "20-0",
  "depositTransactionRef": null,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "Dot",
  "effectiveBoostFeeBps": null,
  "egress": {
    "amount": "4945198948008612506",
    "broadcastId": null,
    "chain": "Ethereum",
    "createdAt": Any<Date>,
    "id": Any<BigInt>,
    "nativeId": 1n,
    "scheduledAt": 2022-12-06T14:31:45.000Z,
    "scheduledBlockIndex": "120-0",
    "updatedAt": Any<Date>,
  },
  "egressId": Any<BigInt>,
  "fees": [
    {
      "amount": "167509500781711",
      "asset": "Eth",
      "type": "EGRESS",
    },
  ],
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 9876545n,
  "numberOfChunks": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "LEGACY_SWAP",
  "srcAddress": null,
  "srcAsset": "Eth",
  "swapDepositChannelId": null,
  "swapInputAmount": "10000000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2022-12-06T14:31:33.000Z,
  "swapRequestedBlockIndex": "92-398",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapEgressScheduled > adds an egress and fee to a swap request for 160 schema 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "chunkIntervalBlocks": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "10000000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2022-12-06T14:31:33.000Z,
  "depositFinalisedBlockIndex": "20-0",
  "depositTransactionRef": null,
  "destAddress": "1yMmfLti1k3huRQM2c47WugwonQMqTvQ2GUFxnU7Pcs7xPo",
  "destAsset": "Dot",
  "effectiveBoostFeeBps": null,
  "egress": {
    "amount": "10000000000",
    "broadcastId": null,
    "chain": "Ethereum",
    "createdAt": Any<Date>,
    "id": Any<BigInt>,
    "nativeId": 1n,
    "scheduledAt": 2022-12-06T14:31:45.000Z,
    "scheduledBlockIndex": "120-0",
    "updatedAt": Any<Date>,
  },
  "egressId": Any<BigInt>,
  "fees": [
    {
      "amount": "1000000000",
      "asset": "Eth",
      "type": "EGRESS",
    },
  ],
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 9876545n,
  "numberOfChunks": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "LEGACY_SWAP",
  "srcAddress": null,
  "srcAsset": "Eth",
  "swapDepositChannelId": null,
  "swapInputAmount": "10000000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2022-12-06T14:31:33.000Z,
  "swapRequestedBlockIndex": "92-398",
  "totalBrokerCommissionBps": 0,
}
`;

exports[`swapEgressScheduled > uses gas asset for egress fee when CCM for 160 schema 1`] = `
{
  "ccmDepositReceivedBlockIndex": null,
  "ccmGasBudget": null,
  "ccmMessage": null,
  "chunkIntervalBlocks": null,
  "completedAt": null,
  "completedBlockIndex": null,
  "depositAmount": "1000000",
  "depositBoostedAt": null,
  "depositBoostedBlockIndex": null,
  "depositFinalisedAt": 2022-12-06T14:31:33.000Z,
  "depositFinalisedBlockIndex": "20-0",
  "depositTransactionRef": null,
  "destAddress": "0x6Aa69332B63bB5b1d7Ca5355387EDd5624e181F2",
  "destAsset": "ArbUsdc",
  "effectiveBoostFeeBps": null,
  "egress": {
    "amount": "10000000000",
    "broadcastId": null,
    "chain": "Arbitrum",
    "createdAt": Any<Date>,
    "id": Any<BigInt>,
    "nativeId": 1n,
    "scheduledAt": 2022-12-06T14:31:45.000Z,
    "scheduledBlockIndex": "120-0",
    "updatedAt": Any<Date>,
  },
  "egressId": Any<BigInt>,
  "fees": [
    {
      "amount": "1000000000",
      "asset": "ArbEth",
      "type": "EGRESS",
    },
  ],
  "id": Any<BigInt>,
  "maxBoostFeeBps": 0,
  "nativeId": 9876545n,
  "numberOfChunks": null,
  "originType": "VAULT",
  "prewitnessedDepositId": null,
  "refundEgressId": null,
  "requestType": "CCM",
  "srcAddress": null,
  "srcAsset": "ArbUsdc",
  "swapDepositChannelId": null,
  "swapInputAmount": "1000000",
  "swapOutputAmount": null,
  "swapRequestedAt": 2022-12-06T14:31:33.000Z,
  "swapRequestedBlockIndex": "92-398",
  "totalBrokerCommissionBps": 0,
}
`;
